--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  
   <body>
     <h1>YehorSolohub</h1>
-    <p>Welcome to my website!</p>
+    <p>Братишка красавчик!</p>
     <img src="https://www.spletnik.ru/img/2019/10/elizaveta/20191023.9-min.gif" />
   </body>
  
